@@ -7,9 +7,10 @@ crystal-facet-uml (1.41.1) UNRELEASED; urgency=medium
     layout_good_cases: ERR=0, W/C=7, W/F=167, W/R=59
     layout_challenging_cases: ERR=64, W/C=8033, W/F=8379, W/R=5408
     improved to
-    layout_good_cases: ERR=0, W/C=7, W/F=167, W/R=69
-    layout_challenging_cases: ERR=64, W/C=8033, W/F=8379, W/R=5302
+    layout_good_cases: ERR=0, W/C=7, W/F=167, W/R=72
+    layout_challenging_cases: ERR=64, W/C=8033, W/F=8379, W/R=5307
   * relationships: dropped idea of overlapping same-typed arrows
+  * relationships: avoid L, r, 7, J pattern-parts in respective corners
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, xx Sep 2022 09:00:00 +0100
 
